--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
-MONGO_URI=
+MONGO_URI=mongodb+srv://rafiulislam4472:LmBLSFggL0L4ZgS6@cluster0.xvgpm32.mongodb.net/eleganza
+# rafiulislam4472
+# LmBLSFggL0L4ZgS6
 JWT_SECRET=
