--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,2 @@
-MONGO_URI=mongodb+srv://rafiulislam4472:LmBLSFggL0L4ZgS6@cluster0.xvgpm32.mongodb.net/eleganza
-# rafiulislam4472
-# LmBLSFggL0L4ZgS6
+MONGO_URI=
 JWT_SECRET=
